manifest/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>ALTF__Altify_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Altify Opportunity</label>
        <referenceTo>ALTF__Opportunity__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Not Submitted</fullName>
                </value>
                <value>
                    <fullName>Approval Required</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bookings_Clone__c</fullName>
        <description>Clone of Bookings field</description>
        <label>Bookings(Clone)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Probability_Reason__c</fullName>
        <label>Custom Probability Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Probability_Used__c</fullName>
        <formula>IF( TEXT(StageName )= &quot;Prospect&quot; &amp;&amp;  Probability  &lt;&gt; 0.10,TRUE,
IF( TEXT(StageName )= &quot;Discovery&quot; &amp;&amp;  Probability  &lt;&gt; 0.25,TRUE,
IF( TEXT(StageName )= &quot;Proposal&quot; &amp;&amp;  Probability  &lt;&gt; 0.50,TRUE,
IF( TEXT(StageName )= &quot;Review/Negotiation&quot; &amp;&amp;  Probability  &lt;&gt; 0.75,TRUE,
IF( TEXT(StageName )= &quot;Contracting&quot; &amp;&amp;  Probability  &lt;&gt; 0.90,TRUE, FALSE)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custom Probability Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Early_Implementation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked from the Early Implementation button on the opportunity.</description>
        <label>Early Implementation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incentive__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <description>Opportunity Incentive</description>
        <label>Incentive</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>100% Fee At-Risk</fullName>
                </value>
                <value>
                    <fullName>Incentive 1</fullName>
                </value>
                <value>
                    <fullName>Incentive 2</fullName>
                </value>
                <value>
                    <fullName>Incentive 3</fullName>
                </value>
                <value>
                    <fullName>Incentive 4</fullName>
                </value>
                <value>
                    <fullName>Incentive 5</fullName>
                </value>
                <value>
                    <fullName>Incentive 6</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_2nd_Year_Est_Revenue__c</fullName>
        <label>2nd Year Est Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_3rd_Year_Est_Revenue__c</fullName>
        <label>3rd Year Est Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_AGTS__c</fullName>
        <description>For legacy purposes, used to identify the original account this opportunity was tied to before the consolidation into GCRM (useful for operational systems and their billing accounts downstream)</description>
        <label>Account GUID at Time of Sale</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_ARR__c</fullName>
        <description>Refers to the annual recurring revenue</description>
        <formula>IF(!ISNULL(SBQQ__PrimaryQuote__r.L2O_ARR_USGH__c),IF(!ISNULL(SBQQ__PrimaryQuote__r.L2O_ARR__c),SBQQ__PrimaryQuote__r.L2O_ARR_USGH__c + SBQQ__PrimaryQuote__r.L2O_ARR__c,SBQQ__PrimaryQuote__r.L2O_ARR_USGH__c),SBQQ__PrimaryQuote__r.L2O_ARR__c) +  IF(NOT(ISBLANK(L2O_Prior_ARR_value__c)),L2O_Prior_ARR_value__c,0)</formula>
        <label>ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Account_GUID__c</fullName>
        <description>Used for Data Migration</description>
        <formula>Account.L2O_GUID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account GUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Age__c</fullName>
        <formula>TEXT(IF(
NOT(IsClosed), ROUND(NOW()-CreatedDate, 0), ROUND( CloseDate - DATEVALUE(CreatedDate) , 0)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Amend_Asset_Contact__c</fullName>
        <description>Field is updated via the Manage Install Base LWC and used to create an Opportunity Contact Role for Asset only amendments</description>
        <formula>Account.L2O_Amend_Asset_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amend Asset Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Benefit_Consultant_Involved_in_Deal__c</fullName>
        <description>Used for USGH to reflect Consultant involvement</description>
        <label>Benefit Consultant Involved in Deal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Involvement</fullName>
                </value>
                <value>
                    <fullName>Consultant introduced us, but was not involved in selling</fullName>
                </value>
                <value>
                    <fullName>Consultant introduced us, and was involved in selling</fullName>
                </value>
                <value>
                    <fullName>Consultant did not introduce us, but was involved in selling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Bill_To_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Contact</description>
        <label>Bill To Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Bill_to_Country__c</fullName>
        <description>Same as Address Country</description>
        <label>Bill to Country</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Billing_Frequency__c</fullName>
        <description>How often is the client billed</description>
        <label>Billing Frequency</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Bookings_Total__c</fullName>
        <description>Total of revenue from Primary Quote</description>
        <formula>IF( L2O_Launch_Date_Update__c = false,
SBQQ__PrimaryQuote__r.L2O_Bookings_Total__c +  SBQQ__PrimaryQuote__r.L2O_Bookings_Total_USGH__c, 0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Broadcast_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when Mulesoft process the payload</description>
        <label>Broadcast Message?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Business_Region__c</fullName>
        <description>To default to Accounts Business Region</description>
        <label>Business Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2O_Business_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Business_Unit__c</fullName>
        <description>Legacy field used for reporting</description>
        <label>Business Unit</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Channel_Segment__c</fullName>
        <description>Which of the 5 segments (Employer, Health Plan, Client Management, INTL, HHS) is this Opportunity a part of?</description>
        <label>Channel Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Health Plan</fullName>
                </value>
                <value>
                    <fullName>Client Management</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Hospital &amp; Health System (HHS)</fullName>
                </value>
                <value>
                    <fullName>Partner (Broker)</fullName>
                    <isActive>false</isActive>
                    <label>Partner (Broker)</label>
                </value>
                <value>
                    <fullName>Partner (Consultant)</fullName>
                    <isActive>false</isActive>
                    <label>Partner (Consultant)</label>
                </value>
                <value>
                    <fullName>Partner (Reseller)</fullName>
                    <isActive>false</isActive>
                    <label>Partner (Reseller)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Client_Line_of_Business__c</fullName>
        <description>Origin of Business the client works in</description>
        <label>Client Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Client_Line_of_Business</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Closed_By_Rip_And_Replace__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identify if this Opportunity is superseded by a Rip and Replace transaction</description>
        <label>Closed By Rip And Replace</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Comments__c</fullName>
        <description>Direction on what action will happen next for the Opportunity</description>
        <label>Next Steps/Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2O_Competitor_s__c</fullName>
        <description>List of Companies in the same industry</description>
        <label>Competitor(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2nd.MD</fullName>
                </value>
                <value>
                    <fullName>98point6</fullName>
                </value>
                <value>
                    <fullName>Abacus Health</fullName>
                </value>
                <value>
                    <fullName>AbleTo</fullName>
                </value>
                <value>
                    <fullName>Accolade</fullName>
                </value>
                <value>
                    <fullName>ACESO</fullName>
                </value>
                <value>
                    <fullName>Amazon</fullName>
                </value>
                <value>
                    <fullName>Amazon Care</fullName>
                </value>
                <value>
                    <fullName>American Well</fullName>
                </value>
                <value>
                    <fullName>Amwell</fullName>
                </value>
                <value>
                    <fullName>AndorHealth</fullName>
                </value>
                <value>
                    <fullName>Anthem</fullName>
                </value>
                <value>
                    <fullName>Apple</fullName>
                </value>
                <value>
                    <fullName>Avasure</fullName>
                </value>
                <value>
                    <fullName>Avera Health</fullName>
                </value>
                <value>
                    <fullName>Babylon Health</fullName>
                </value>
                <value>
                    <fullName>Banyan</fullName>
                </value>
                <value>
                    <fullName>Beacon Health Options</fullName>
                </value>
                <value>
                    <fullName>Big Health</fullName>
                </value>
                <value>
                    <fullName>BigHealth</fullName>
                </value>
                <value>
                    <fullName>Bravo Wellness</fullName>
                </value>
                <value>
                    <fullName>Calm</fullName>
                </value>
                <value>
                    <fullName>Carbon</fullName>
                </value>
                <value>
                    <fullName>Care. AI</fullName>
                </value>
                <value>
                    <fullName>Caregility</fullName>
                </value>
                <value>
                    <fullName>Carrier Solution</fullName>
                </value>
                <value>
                    <fullName>Cigna</fullName>
                </value>
                <value>
                    <fullName>CirrusMD</fullName>
                </value>
                <value>
                    <fullName>Consumer Medical</fullName>
                </value>
                <value>
                    <fullName>Crossover Health</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_ContactRoleExist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does a Contact Role Exists on the Opportunity</description>
        <label>Contact Role Exist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Contract_Path_Sub_type__c</fullName>
        <description>Does the Contract Path have: No pricing, Contracted Pricing or New Pricing</description>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contract_Path_Sub_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Contract_Path__c</fullName>
        <description>How should this Opportunity be Contracted?</description>
        <label>Contract Path</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contract_Path</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Contracting_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CON0000681-25449</description>
        <label>Contracting Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Contracting Account)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Country_of_Service__c</fullName>
        <description>Select Country based on Billing Address</description>
        <label>Country of Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia, Plurinational State of</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_DirectEmployerBusiness__c</fullName>
        <description>Are the services of this direct contract with Teladoc Health being sold to an Employer (non-HHS) business to be offered to their employees?</description>
        <inlineHelpText>Are you selling direct to an Employer business?</inlineHelpText>
        <label>Direct Employer Business</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>L2O_DirectTDHContract__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_DirectTDHContract__c</fullName>
        <description>Is this a direct contract with Teladoc Health?</description>
        <inlineHelpText>Is this a direct contract with Teladoc Health?</inlineHelpText>
        <label>Direct TDH Contract</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_End_Customer_Name__c</fullName>
        <description>Date Account is no longer a customer</description>
        <label>End Customer Name</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_End_Date__c</fullName>
        <description>Date Opportunity ends</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_Est_First_Year_Revenue__c</fullName>
        <formula>IF( SBQQ__PrimaryQuote__r.L2O_Revenue_for_One_time__c &gt; 0, SBQQ__PrimaryQuote__r.L2O_Revenue_for_One_time__c, 0) + IF( SBQQ__PrimaryQuote__r.L2O_Net_ARR__c &gt; 0, SBQQ__PrimaryQuote__r.L2O_Net_ARR__c, 0) + L2O_Prior_Est_First_Year_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est First Year Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Est_In_Year_Revenue__c</fullName>
        <formula>IF(OR(YEAR(SBQQ__PrimaryQuote__r.SBQQ__StartDate__c) = YEAR(TODAY()), YEAR(TODAY()) &gt;  YEAR(CloseDate)),(IF( (13 - MONTH(  SBQQ__PrimaryQuote__r.SBQQ__StartDate__c  )) &gt;  L2O_Term_Calculation__c , 
L2O_Term_Calculation__c * SBQQ__PrimaryQuote__r.L2O_Monthly_Price_Total__c,  (13 - MONTH(SBQQ__PrimaryQuote__r.SBQQ__StartDate__c )) * SBQQ__PrimaryQuote__r.L2O_Monthly_Price_Total__c)),0) +   L2O_Prior_Est_In_Year_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est. In Year Revenue (IYR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Est_One_Time_Revenue__c</fullName>
        <formula>SBQQ__PrimaryQuote__r.L2O_One_Time_with_Upfront__c +  L2O_Prior_Est_One_Time_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est. One Time Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Fee_Type__c</fullName>
        <description>Fixed price charged for service</description>
        <label>Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PEPM</fullName>
                </value>
                <value>
                    <fullName>PMPM</fullName>
                </value>
                <value>
                    <fullName>PPPM</fullName>
                </value>
                <value>
                    <fullName>Flat Rate</fullName>
                </value>
                <value>
                    <fullName>Case Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Forecast_Manager_Call__c</fullName>
        <description>Additional identifier if this Opportunity should be included in the forecast</description>
        <label>Forecast Manager Call</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not in Forecast</fullName>
                </value>
                <value>
                    <fullName>Forecast - Upside</fullName>
                </value>
                <value>
                    <fullName>Forecast - Call</fullName>
                </value>
                <value>
                    <fullName>Forecast - Closed</fullName>
                </value>
                <value>
                    <fullName>Internal/External Tags</fullName>
                    <isActive>false</isActive>
                    <label>Internal/External Tags</label>
                </value>
                <value>
                    <fullName>Meeting Status</fullName>
                    <isActive>false</isActive>
                    <label>Meeting Status</label>
                </value>
                <value>
                    <fullName>Meeting Type</fullName>
                    <isActive>false</isActive>
                    <label>Meeting Type</label>
                </value>
                <value>
                    <fullName>Method of outreach</fullName>
                    <isActive>false</isActive>
                    <label>Method of outreach</label>
                </value>
                <value>
                    <fullName>Prospecting or Pipeline Acceleration?</fullName>
                    <isActive>false</isActive>
                    <label>Prospecting or Pipeline Acceleration?</label>
                </value>
                <value>
                    <fullName>Result</fullName>
                    <isActive>false</isActive>
                    <label>Result</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Full_Value_of_Agreement__c</fullName>
        <formula>SBQQ__PrimaryQuote__r.L2O_Full_Value_of_Agreement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Value of Agreement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_GUID__c</fullName>
        <description>Global Unique Identifier that is used for integration</description>
        <externalId>true</externalId>
        <inlineHelpText>System Generated Global UniqueId</inlineHelpText>
        <label>GUID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2O_InitialOpportunityGUID__c</fullName>
        <description>Contains the related New Business GUID</description>
        <label>Initial Opportunity GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Initial_of_Lives__c</fullName>
        <description># of Employees or Members, in this piece of Business</description>
        <inlineHelpText>Number of lives, either employees OR members, to be closed (formerly \Initial # of Lives\&quot;). Should be only what will be acquired if this particular piece of business is closed - not the total number at the company. SALES REPS: Be conservative!&quot;</inlineHelpText>
        <label>Number of Lives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Invoicing_Country__c</fullName>
        <label>Invoicing Country</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>L2O_Business_Region__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>L2O_Invoicing_Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_IsAccountAmendAssets__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helper field to identify if this Opportunity was created from the amend asset flow</description>
        <label>IsAccountAmendAssets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_LVN_Migration_Opp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LV Migration Opp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Last_Integration_Date__c</fullName>
        <description>Last date of when data was migrated</description>
        <label>Last Integration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L2O_Last_Referral_Date__c</fullName>
        <label>Last Referral Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_Launch_Date_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Launch Date Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Lead_Id__c</fullName>
        <label>Lead Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Lead_Score__c</fullName>
        <description>The Channel through which a potential customer discovers the business</description>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Lead_Source_Detail_Other__c</fullName>
        <description>Additional information about where the Lead came from</description>
        <label>Lead Source Detail - Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Lead_source_detail__c</fullName>
        <description>Additional information about where the Lead came from</description>
        <label>Lead Source Detail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Email - Inbound</fullName>
                </value>
                <value>
                    <fullName>Email - Outbound</fullName>
                </value>
                <value>
                    <fullName>Event / Tradeshow</fullName>
                </value>
                <value>
                    <fullName>Paid Advertising (includes Social)</fullName>
                </value>
                <value>
                    <fullName>Inbound Call</fullName>
                </value>
                <value>
                    <fullName>Telemarketing</fullName>
                </value>
                <value>
                    <fullName>Third Party Acquired (Includes Partner)</fullName>
                </value>
                <value>
                    <fullName>Web Form</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Hosted Event</fullName>
                </value>
                <value>
                    <fullName>Nurture</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>TPA</fullName>
                </value>
                <value>
                    <fullName>Benefit Consultant</fullName>
                </value>
                <value>
                    <fullName>Referral Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Legacy_ARR_Weighted__c</fullName>
        <description>Used for Data Migration</description>
        <label>Legacy ARR Weighted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Legacy_ARR__c</fullName>
        <description>Used for Data Migration</description>
        <label>Legacy ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Legacy_Booking_INTL__c</fullName>
        <description>Used for Data Migration</description>
        <label>Legacy Booking (INTL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Legacy_Bookings__c</fullName>
        <description>Used for Data Migration</description>
        <label>Legacy Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>